--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -2,11 +2,11 @@
 .button-33 {
   background-color: #c2fbd7;
   border-radius: 100px;
-  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
   color: green;
   cursor: pointer;
   display: inline-block;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
   padding: 7px 20px;
   text-align: center;
   text-decoration: none;
@@ -16,11 +16,6 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-}
-
-.button-33:hover {
-  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
-  transform: scale(1.05) rotate(-1deg);
 }
 
 .cta {
@@ -42,19 +37,10 @@
   transition: all 0.3s ease;
 }
 
-.cta:hover svg {
-  transform: translateX(0);
-}
-
-.cta:active svg {
-  transform: scale(0.9);
-}
-
 .hover-underline-animation {
   position: relative;
   color: rgb(4, 73, 246);
   padding-bottom: 20px;
-
 }
 
 .hover-underline-animation:after {
@@ -70,7 +56,19 @@
   transition: transform 0.25s ease-out;
 }
 
-.cta:hover .hover-underline-animation:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+/* Responsive Styles */
+
+@media only screen and (max-width: 768px) {
+  .button-33 {
+    font-size: 14px;
+    padding: 5px 15px;
+  }
+
+  .cta span {
+    font-size: 12px;
+  }
+
+  .cta svg {
+    transform: translateX(-5px);
+  }
 }
